--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/LOGO.jpg" />
+    <link rel="icon" type="image/svg+xml" href="img/LOGO.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trường Đại Học Văn Hóa Thể Thao Và Du Lịch Thanh Hóa</title>
   </head>
