--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="img/LOGO.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TUCST University - Thanh Hoa University of Culture, Sports and Tourism</title>
+    <title>TUCST - Thanh Hoa University of Culture, Sports and Tourism</title>
   </head>
   <body>
     <div id="root"></div>
